# Copyright (c) 2016 Intel Corporation. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//librs_mojo/librs_mojo_options.gni")

config("librs_mojo_config") {
  if (enable_mojo_librealsense) {
    defines = [ "ENABLE_MOJO_LIBREALSENSE" ]
  }
}
