# Copyright (c) 2016 Intel Corporation. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//librs_mojo/librs_mojo_options.gni")

shared_library("librealsense_wrapper") {
  sources = [
    "librs_context.cc",
    "librs_context.h",
    "librs_device.cc",
    "librs_device.h",
    "librs_thunks.cc",
    "librs_thunks.h",
    "librs_thunks_api.h",
    "librs_wrapper_export.h",
  ]

  defines = [ "LIBRS_MOJO_WRAPPER_IMPLEMENTATION" ]
  public_configs = [ "//librs_mojo:librs_mojo_config" ]
}
